wwr/styles/rafting.css
:root {
    --primary-color: #1A5276;
    /* Deep blue */
    --secondary-color: #186638;
    /* Green */
    --accent1-color: #E67E22;
    /* Orange */
    --base-color: #F4F6F7;
    /* White*/
    --heading-font: 'Bebas Neue', sans-serif;
    --body-font: 'Inter', sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--secondary-color);
    background-color: var(--base-color);
}

header,
main,
footer {
    width: 840px;
    margin: 0 auto;
}

h1,
h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
}

.socialmedia a {
    text-decoration: none;
}

.hero {
    position: relative;
    margin: 5px;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.8;
    background-color: var(--accent1-color);
    color: #fff;
    text-shadow: 2px 2px black;
}

.hero article {
    position: absolute;
    top: 250px;
    background-color: rgba(230, 126, 34, 0.8);
    color: black;
    border-radius: 10px;
    padding: 2px;
}

.hero article img {
    float: right;
    width: 110px;
    border: 1px solid white;
    margin: 10px;
    box-shadow: 0 0 30px var(--base-color);
}

section h2 {
    background-color: var(--accent1-color);
    text-align: center;
    color: white;
}

.socialmedia img {
    width: 24px;
    height: 24px;
    margin: 0;
}

header {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    background-color: var(--primary-color);
}

header img {
    width: 100px;
    padding: 1rem;
    border-radius: 30px;
}

nav {
    display: flex;
    justify-content: space-around;
}

nav a {
    text-decoration: none;
    border: 1px solid black;
    border-radius: 0.3rem;
    padding: 0.5rem;
    color: white;
}

section .content {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
}

section img {
    width: 100%;
    height: auto;
}

section .combo {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
}

.combo img {
    padding: 0.5rem;
}

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.socialmedia {
    display: flex;
    gap: 15px;
    margin: 0;
    padding: 0;
}

section.contact {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

.text {
    grid-column: 1 / -1;
    text-align: center;
}

.text p {
    margin: 4px;
    padding: 2px 0;
}

/* Form Styling */
form {
    width: 100%;
    margin: 0 auto;
    padding: 1rem;
    border: 1px solid black;
    border-radius: 0.5rem;
    box-sizing: border-box;
    background: rgb(228, 224, 224);

    /* Grid */
    display: grid;
    grid-template-columns: 1fr;
}

fieldset {
    display: grid;
    gap: .5rem;
    margin: 1rem;
    border: 1px solid rgb(0 0 0 / 0.2);
    padding: 1rem;
}

legend {
    padding: 0.5rem;
    color: navy;
    font-size: 1.3em;
}

button {
    width: 200px;
    padding: 10px;
    margin: 1rem auto;
    display: block;
    font: bold 0.6em sans-serif;
    border: none;
    border-radius: 5px;
    background: navy;
    color: white;
    cursor: pointer;
}

button:hover,
button:focus {
    background: #000080cc;
    color: white;
}

label {
    text-align: right;
    padding-right: 1rem;
}

input,
select,
textarea {
    padding: 0.5rem;
    font-size: 1.1rem;
}

input[type="checkbox"] {
    width: 22px;
    height: 22px;
    vertical-align: bottom;
}

section .employee {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.employee img {
    padding: 0.5rem;
    width: 100%;
    height: 250px;
    object-fit: cover;
}

iframe {
    width: 100%;
    height: 100%;
}

